<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CheeseCloud</string>
    
    <!--  app升级 versionCode 验证地址  -->
    <string  name="update_url">http://58.116.52.8:8188/updateApk/updateinfo.json</string>

    <!-- UploadActivity -->
    <string name="flash">Internal Storage</string>
    <string name="extsd">"External SD"</string>
    <string name="path_is">path is</string>
    <string name="Multi_select_off">Multi-select off</string>
    <string name="upload_activity_action_bar_title">Upload</string>
    <string name="upload_activity_bottom_bar_title">Select upload folder</string>
    <string name="upload_activity_bottom_bar_select_path_bt">My Cloud</string>
    <string name="upload_activity_bottom_bar_upload_bt">Upload</string>
    <string name="upload_activity_bottom_bar_default_item_string">Disk</string>
    <string name="upload_activity_list_item_count_unit_string">items</string>
    <string name="title_images">Images</string>
    <string name="title_video">Video</string>
    <string name="title_files">Files</string>

    <!-- SelectPathActivity -->
    <string name="select_path_activity_action_bar_title">Select upload folder</string>
    <string name="action_create_directory">Create directory</string>
    <string name="select_path_activity_cancel_bt_string">Cancel</string>
    <string name="select_path_activity_ok_bt_prefix_string">Select: </string>

    <!-- main menu -->
    <string name="New_Directory">New Directory</string>
    <string name="Search">Search</string>
    <string name="Settings">Settings</string>
    <string name="Quit">Logout</string>
    <string name="Help">Help</string>

    <!-- App setting fragment -->
    <string name="Display">Display</string>
    <string name="Show_hidden_files_folders">Show hidden files/folders</string>
    <string name="Display_f_f">Display files and folders that begin with a (period)</string>
    <string name="Show_Image_Preview">Show Image Preview</string>
    <string name="Display_thumbnail">Display a thumbnail for image files</string>
    <string name="Sorting">Sorting</string>
    <string name="Sorting_type">Sorting type</string>
    <string name="Choose_sort_type">Choose how to sort files and folders</string>
    <string name="Sort_by">Sort by...</string>
    <string name="None">None</string>
    <string name="Alphabetical">Alphabetical</string>
    <string name="Type">Type</string>

    <!-- MainActivity title bar -->
    <string name="title_activity_main">Cheese Cloud</string>
    <string name="double_click_exit_hint_msg">Please click BACK again to exit</string>

    <!-- MainActivity Home Fragment -->
    <string name="tab_home_item_news_title">News</string>
    <string name="tab_home_item_cloud_disk_title">Cloud Disk</string>
    <string name="tab_home_item_res_lib_title">Resource Library</string>
    <string name="tab_home_item_small_class_title">Small Class</string>
    <string name="tab_home_item_temp_screen_title">Temp Screen</string>

    <!-- TransferStateActivity -->
    <string name="transfer_state_activity_download_section_title">Download List</string>
    <string name="transfer_state_activity_upload_section_title">Upload List</string>
    <string name="transfer_state_activity_control_start_all_bt_text">Resume all</string>
    <string name="transfer_state_activity_control_pause_all_bt_text">Pause all</string>
    <string name="transfer_state_activity_control_cancel_all_bt_text">Cancel all</string>
    <string name="transfer_state_activity_control_clear_all_bt_text">Clear all</string>
    <string name="title_activity_transfer_state">Transfer State</string>
    <!-- FragmentUploadList -->
    <string name="fragment_upload_list_wait_upload_state">Waiting</string>
    <string name="fragment_upload_list_uploading_state">Uploading</string>
    <string name="fragment_upload_list_pause_upload_state">Pause</string>
    <string name="fragment_upload_list_uploaded_state">Uploaded</string>
    <!-- FragmentDownloadList -->
    <string name="fragment_download_list_wait_download_state">Waiting</string>
    <string name="fragment_download_list_downloading_state">Downloading</string>
    <string name="fragment_download_list_pause_download_state">Pause</string>
    <string name="fragment_download_list_downloaded_state">Downloaded</string>

    <!-- Help page -->
    <string name="product_info">Cheese Cloud description</string>
    <string name="version_info">Version: 1.0 beta</string>
    <string name="Email_Developer">Email Developer</string>
    <string name="send_email_chooser_title">Email using ...</string>
    <string name="Website">Website</string>
    <string name="title_activity_select_path">SelectPathActivity</string>
    <string name="action_settings">Settings</string>

    <!-- Welcome Activity -->
    <string name="welcome_login_bt_string">Login</string>
    <string name="welcome_about_bt_string">About</string>
    <string name="title_activity_select_upload">SelectUploadActivity</string>

    <!-- CloudFilesActivity -->
    <string name="title_activity_cloud_files">Cloud Disk</string>
    <!-- CloudFilesActivity.CAB -->
    <string name="cab_title">Select %d unit</string>
    <string name="cab_subtitle">subtitle</string>
    <string name="cab_delete_action">Delete</string>
    <string name="cab_download_action">Download</string>
    <string name="cab_edit_action">Edit</string>
    <string name="cab_cut_action">Cut</string>
    <string name="cab_copy_action">Copy</string>
    <string name="cab_share_action">Share</string>
    <string name="cab_more_action">More</string>
    <!-- CloudFilesActivity.AB-->
    <string name="ab_create_folder_action">New Folder</string>
    <string name="ab_upload_action">Upload</string>
    <!-- CloudFilesActivity.MakeDirDailog -->
    <string name="cfa_make_dir_dialog_title">New Directory</string>
    <string name="cfa_make_dir_dialog_def_dirName">New Directory</string>
    <!-- CloudFilesActivity.EditFileDialog -->
    <string name="cfa_rename_dialog_title">Rename</string>

    <!-- single_input_layout -->
    <string name="input_layout_cancel">Cancel</string>
    <string name="input_layout_create">Create</string>
    <string name="input_layout_confirm">Confirm</string>

    <!-- PlayFileHelper -->
    <string name="directory">directory:</string>
    <string name="equipment">Device</string>
    <string name="video">Video</string>
    <string name="picture">Picture</string>
    <string name="music">Music</string>
    <string name="file">File</string>
    <string name="open_file">Select the type of file</string>
    <string name="text">Text</string>
    <string name="not_app_to_open_the_file">have not install any app to open the file</string>
    <string name="not_app_to_oepn_the_pic">have not install any app to open the picture</string>
    <string name="not_app_to_play_the_video">have not install any app to play the video</string>
    <string name="not_app_to_play_the_music">have not install any app to play the music</string>
    
    <!-- FragmentHomeItme   -->
	<string name="cancel">取消</string>
	<string name="cloud_file_browser_nums_no">选择了0个</string>
	<string name="all_select">全选</string>
	
	<string name="welcome_button_layout_width">95dip</string>
	<string name="welcome_button_layout_height">35dip</string>
	
	<string name="newfile_button_text">新建</string>
	<string name="upload_button_text">上传</string>
	<string name="copy_button_text">复制</string>
	<string name="paste_button_text">粘贴</string>
	<string name="mobile">移动</string>
	<string name="more_button_text">更多操作</string>
	<string name="downlaod_button_text">下载</string>

	<string name="actionbar_image_title">校园云盘</string>
	
	<string name="back">返回</string>
	
	<string name="loadingFile">打开文件(需下载)</string>
	<string name="openFile">预览文件</string>
	<string name="music_play_title">播放</string>
    <string name="music_continue_play">继续播放</string>
    <string name="music_playing">正在播放</string>
    <string name="music_buffering">正在缓冲...</string>
    
    
    <string name="pudate_cheese">上传到校园云盘</string>
    
    <string name="menu_zoom_enable">Enable Zoom</string>
    <string name="menu_zoom_disable">Disable Zoom</string>
    <string name="menu_scale_fit_center">Change to FIT_CENTER</string>
    <string name="menu_scale_fit_start">Change to FIT_START</string>
    <string name="menu_scale_fit_end">Change to FIT_END</string>
    <string name="menu_scale_fit_xy">Change to FIT_XY</string>
    <string name="menu_scale_center">Change to CENTER</string>
    <string name="menu_scale_center_inside">Change to CENTER_INSIDE</string>
    <string name="menu_scale_center_crop">Change to CENTER_CROP</string>
    <string name="menu_zoom_random_animate">Animate scale to random value</string>
    <string name="menu_zoom_random">Set scale to random value</string>
    <string name="menu_matrix_restore">Restore Display Matrix</string>
    <string name="menu_matrix_capture">Capture Display Matrix</string>
    <string name="extract_visible_bitmap">Extract visible bitmap</string>
    <string name="menu_lock">Lock</string>
    <string name="menu_unlock">Unlock</string>
    
    
    <string name="notice_tile_name">我的邮件</string>
    <string name="button_send">发送</string>
     <string name="release_to_refresh">Release to refresh</string>
    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="refreshing">Refreshing...</string>
    <string name="updating">Updating：</string>
    
    
</resources>
