<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/cab_menu_share" android:title="@string/cab_share_action"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/cab_action_share"
        android:orderInCategory="100" />
    <item android:id="@+id/cab_menu_delete" android:title="@string/cab_delete_action"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/cab_action_delete"
        android:orderInCategory="100" />
    <item android:id="@+id/cab_menu_download" android:title="@string/cab_download_action"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/cab_action_download"
        android:orderInCategory="100" />
    <item android:id="@+id/cab_menu_cut" android:title="@string/cab_cut_action"
        android:icon="@drawable/cab_action_cut"
        android:showAsAction="ifRoom|withText"
        android:orderInCategory="100" />
    <item android:id="@+id/cab_menu_edit" android:title="@string/cab_edit_action"
        android:icon="@drawable/cab_action_edit"
        android:showAsAction="ifRoom|withText"
        android:orderInCategory="100" />
    <item android:id="@+id/cab_menu_copy" android:title="@string/cab_copy_action"
        android:icon="@drawable/cab_action_copy"
        android:showAsAction="ifRoom|withText"
        android:orderInCategory="100" />
</menu>
