<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|fill">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/upload_activity_header_flash_tab"
            android:paddingRight="3dp"
            android:background="@drawable/upload_activity_header_bg"
            android:id="@+id/home_flash_button"
            android:layout_weight="1" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/upload_activity_header_picture_tab"
            android:paddingRight="3dp"
            android:background="@drawable/upload_activity_header_bg"
            android:id="@+id/image_button"
            android:layout_weight="1" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/upload_activity_header_video_tab"
            android:paddingRight="3dp"
            android:background="@drawable/upload_activity_header_bg"
            android:id="@+id/movie_button"
            android:layout_weight="1" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_1"
            android:paddingRight="3dp"
            android:background="@drawable/upload_activity_header_bg"
            android:id="@+id/back_button"
            android:layout_weight="1" />
    </LinearLayout>
    <!--Use to show current path-->
    <TextView
        android:id="@+id/path_label"
        android:text="@string/path_is"
        android:maxLines="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"/>
    <include layout="@layout/path_bar_layout" />
    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        android:smoothScrollbar="true"
        android:longClickable="true"
        android:id="@+id/android:list"
        style="@style/AppTheme" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ff0a0910">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:text="@string/upload_activity_bottom_bar_title"
            android:id="@+id/textView"
            android:layout_alignParentTop="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/upload_activity_bottom_bar_select_path_bt"
            android:id="@+id/select_upload_location_bt"
            android:layout_below="@+id/textView"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/upload_activity_bottom_bar_upload_bt"
            android:id="@+id/upload_bt"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/textView"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp" />
    </RelativeLayout>

</LinearLayout>

