<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/music_activity_bg" style="@style/fillall"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/titleLayout" android:background="@drawable/music_title_bar_bg" android:layout_width="fill_parent" android:layout_height="@dimen/title_bar_height">
        <TextView android:textSize="15.0dip" android:textColor="@color/trans_title_back" android:gravity="center_vertical" android:id="@+id/ib_playback" android:background="@drawable/titlelayout_bg" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/back" android:drawableLeft="@drawable/back" android:drawablePadding="5.0dip" />
        <View android:background="@drawable/title_line" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_toRightOf="@id/ib_playback" />
        <TextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/textView1" android:paddingLeft="7.0dip" android:text="@string/music_playing" android:layout_centerHorizontal="true" style="@style/filly" />
        <ImageView android:id="@+id/iv_playcircle" android:background="@drawable/music_repeat_list" android:layout_width="47.0dip" android:layout_height="fill_parent" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/bottom" android:layout_marginBottom="20.0dip" android:layout_alignParentBottom="true" style="@style/fillx">
        <TextView android:textColor="#ff737373" android:gravity="center_horizontal" android:id="@+id/tv_buffering" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/music_buffering" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="13.0sp" android:textColor="#ff8098ac" android:gravity="center_horizontal" android:id="@+id/currTimeTextView" android:layout_width="50.0dip" android:layout_height="wrap_content" android:text="00:00" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <TextView android:textSize="13.0sp" android:textColor="#ff8098ac" android:gravity="center_horizontal" android:id="@+id/totalTimeTextView" android:layout_width="50.0dip" android:layout_height="wrap_content" android:text="00:00" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            <SeekBar android:id="@+id/progressSeekBar" android:paddingLeft="-1.0dip" android:paddingRight="-1.0dip" android:focusable="false" android:clickable="true" android:scaleType="centerInside" android:maxHeight="3.0dip" android:progressDrawable="@drawable/music_progress" android:minHeight="3.0dip" android:thumb="@drawable/music_progress_handle" android:thumbOffset="0.0dip" android:layout_toLeftOf="@id/totalTimeTextView" android:layout_toRightOf="@id/currTimeTextView" android:layout_centerVertical="true" style="@style/fillx" />
        </RelativeLayout>
        <RelativeLayout android:id="@+id/player_control" android:layout_width="fill_parent" android:layout_height="85.0dip" android:layout_alignParentBottom="false">
            <ImageButton android:id="@+id/pausebtn" android:background="@drawable/musi_cplay_bg" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
            <ImageButton android:id="@+id/prevbtn" android:background="@drawable/music_prev" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="0.0dip" android:layout_toLeftOf="@id/pausebtn" android:layout_centerVertical="true" />
            <ImageButton android:id="@+id/nextbtn" android:background="@drawable/music_next" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/pausebtn" android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_above="@id/bottom" android:layout_below="@id/titleLayout" style="@style/fillall">
        <include layout="@layout/music_play_album" />
    </LinearLayout>
</RelativeLayout>